Thu Jan 16 21:54:21 2003  Gary Wong  <gtw@gnu.org>

	* set.c (CommandSetMatchLength): New function.  Allow specifying
	default match length.
	* show.c (CommandShowMatchLength): New function.

Thu Jan 16 15:43:11 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (OptionsPages): New function.  Rearrange options into
	a notebook, so there is room for more verbose descriptions, and
	add tooltips to all options.  Add options controlling sound
	effects (not yet complete).

Thu Jan 16 12:27:05 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (GTKShowPath): Add missing .BKG entry.

Wed Jan 15 15:32:39 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c (ExportGameJF): Revert previous patch; JF .mat format
	shouldn't be internationalised.

Wed Jan 15 14:44:05 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c, set.c, show.c: I18N plural patches from TAKAHASHI Kaoru.

Wed Jan 15 10:40:22 2003  Gary Wong  <gtw@gnu.org>

	* NEWS, README: Updated in preparation for a 0.13 pre-release.

Mon Jan 13 18:54:09 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (GTKRolloutUpdate): honour fOutputWinPC.
	(reported by Albert Silver)

Mon Jan 13 18:17:57 2003  Joern Thyssen  <jth@gnubg.org>

	* show.c (CommandShowFullBoard): player names and scores were inverted.
	(reported by Nardy Pillards)

Sun Jan 12 17:29:14 2003  Gary Wong  <gtw@gnu.org>

	* eval.c (EvalKey): New parameter fCubefulEquity, so that cache
	entries which set OUTPUT_CUBEFUL_EQUITY will not collide with
	those which do not.  All callers changed.

Sun Jan 12 13:23:44 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (ProgressValue): add missing "if ( ! fShowProgress )".
	(contributed by O.M. Riordan)

Sat Jan 11 17:03:37 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (RecordErase): Quote player name parameter.  (Reported by
	Nardy Pillards.)

Sat Jan 11 11:29:01 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktexi.c, gtkmovefilter.c, import.c, show.c, gtkgame.c, eval.c:
	pacify fussy compilers.

Sat Jan 11 10:58:54 2003  Joern Thyssen  <jth@gnubg.org>
