@@ -1,3 +1,8 @@
+Fri Jan 17 12:08:43 2003  Gary Wong  <gtw@gnu.org>
+
+	* gtkgame.c (OptionsPages): Bug fixes for Crawford rule sensitivity
+	and MWC percentage tooltips (reported by Ian Shaw).
+
 Thu Jan 16 21:54:21 2003  Gary Wong  <gtw@gnu.org>
 
 	* set.c (CommandSetMatchLength): New function.  Allow specifying
